--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Caculator</title>
+    <title>Calculator</title>
   </head>
   <body>
     <h1>Calculator</h1>
-    <script scr="js/scripts.js"></script>
+    <script src = "js/scripts.js"></script>
   </body>
 </html>
