--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div class="container">
       <h1>Calculator</h1>
 
-      <h2>Add</h2>
-      <form id="add">
+      <form id="calculator">
         <div class="form-group">
           <label for="num1">1st number:</label>
           <input id="num1" class="form-control" type="text">
@@ -23,55 +22,33 @@
           <input id="num2" class="form-control" type="text">
         </div>
 
-        <button type="submit" class="btn">Add!</button>
-
-      </form>
-
-      <h2>Subtract</h2>
-      <form id="sub">
-        <div class="form-group">
-          <label for="num3">1st number:</label>
-          <input id="num3" class="form-control" type="text">
+        <label for="Operator">Operator</label>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="add" checked>
+            Add
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="subtract">
+            Subtract
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="multiply">
+            Multiply
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="divide">
+            Divide
+          </label>
         </div>
 
-        <div class="form-group">
-          <label for="num4">2nd number:</label>
-          <input id="num4" class="form-control" type="text">
-        </div>
-
-        <button type="submit" class="btn">Subtract!</button>
-
-      </form>
-
-      <h2>Multiply</h2>
-      <form id="multiply">
-        <div class="form-group">
-          <label for="num5">1st number:</label>
-          <input id="num5" class="form-control" type="text">
-        </div>
-
-        <div class="form-group">
-          <label for="num6">2nd number:</label>
-          <input id="num6" class="form-control" type="text">
-        </div>
-
-        <button type="submit" class="btn">Multiply!</button>
-
-      </form>
-
-      <h2>Divide</h2>
-      <form id="divide">
-        <div class="form-group">
-          <label for="num7">1st number:</label>
-          <input id="num7" class="form-control" type="text">
-        </div>
-
-        <div class="form-group">
-          <label for="num8">2nd number:</label>
-          <input id="num8" class="form-control" type="text">
-        </div>
-
-        <button type="submit" class="btn">Divide!</button>
+        <button type="submit" class="btn">Go!</button>
 
       </form>
 
